Changing the button colour

--- a/MainWebsite/assets/css/main.css
+++ b/MainWebsite/assets/css/main.css
@@ -1451,6 +1451,12 @@ section,
   color: var(--accent-color);
 }
 
+.btn.btn-primary {
+  background-color: #f4ba55;
+  border-color: #f4ba55;
+  color: black;
+}
+
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
