--- a/MainWebsite/assets/css/main.css
+++ b/MainWebsite/assets/css/main.css
@@ -17,6 +17,8 @@
   --nav-font: "Poppins",  sans-serif;
 }
 
+@import 'https://fonts.googleapis.com/css?family=Arimo';
+
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
   /*--background-color: #ffffff; /* Background color for the entire website, including individual sections */
